<?xml version="1.0" encoding="utf-8"?>
<!--
 /*
 * Copyright (c) 2014-2015, Loic Blot <loic.blot@unix-experience.fr>
 * All rights reserved.
 * Redistribution and use in source and binary forms, with or without
 * modification, are permitted provided that the following conditions
 * are met:
 * 1. Redistributions of source code must retain the above copyright
 *    notice, this list of conditions and the following disclaimer.
 * 2. Redistributions in binary form must reproduce the above copyright
 *    notice, this list of conditions and the following disclaimer in the
 *    documentation and/or other materials provided with the distribution.
 *
 * THIS SOFTWARE IS PROVIDED BY THE REGENTS AND CONTRIBUTORS ``AS IS'' AND
 * ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
 * IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
 * ARE DISCLAIMED.  IN NO EVENT SHALL THE REGENTS OR CONTRIBUTORS BE LIABLE
 * FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
 * DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS
 * OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION)
 * HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT
 * LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY
 * OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 * SUCH DAMAGE.
 */
-->
<resources>

    <!-- Translation version, reference for translators -->
    <string name="translation_version">6</string>

    <!-- System strings, do not translate -->
    <string name="app_name">ownCloud-SMS</string>
    <string name="account_type">fr.unix_experience.owncloud_sms</string>
    <string name="account_authority">fr.unix_experience.owncloud_sms.datasync.provider</string>
    <string name="slowsync_account_authority">fr.unix_experience.owncloud_sms.datasync.slowsync_provider</string>
    <string name="target_package">fr.unix_experience.owncloud_sms</string>
    <string name="login_logo">Login logo</string>

    <!-- System strings: preferences -->
    <string name="shared_preference_file">ownCloudSMSPrefs</string>
    <string name="pref_lastmsgdate">last_message_date</string>

    <!-- Translations must begin there -->
    <!-- Preferences -->
    <string name="pref_title_sync">SMS - Fast</string>
    <string name="pref_title_sync_frequency">Fast Sync frequency</string>
    <string name="pref_title_slow_sync">SMS - Slow and Secure</string>
    <string name="pref_title_slow_sync_frequency">Secure Slow Sync frequency</string>
    <string name="action_settings">Settings</string>
    <string name="sync_now">Synchronize now</string>
    <string name="pref_category_sync">Synchronization</string>
    <string name="title_global_pref_to_general_prefs">General preferences</string>
    <string name="summary_global_pref_to_general_prefs">Sync options</string>
    <string name="summary_notif_prefs">Notifications</string>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="title_activity_general_settings">General Settings</string>

    <string-array name="pref_sync_frequency_titles">
        <item>5 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>12 hours</item>
        <item>24 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>5</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>720</item>
        <item>1440</item>
        <item>-1</item>
    </string-array>
    <string-array name="pref_slow_sync_frequency_titles">
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>12 hours</item>
        <item>24 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_slow_sync_frequency_values">
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>720</item>
        <item>1440</item>
        <item>-1</item>
    </string-array>

    <string name="pref_sync_wifi">Synchronize in Wi-Fi</string>
    <string name="pref_sync_4g">Synchronize in 4G</string>
    <string name="pref_sync_3g">Synchronize in 3G</string>
    <string name="pref_sync_gprs">Synchronize in 2.5G (GPRS)</string>
    <string name="pref_sync_2g">Synchronize in 2G</string>
    <string name="pref_sync_others">Synchronize in other modes</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Login -->
    <string name="prompt_login">Login</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_login">Login or password incorrect</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="prompt_serverURI">Server address</string>
    <string name="error_invalid_server_address">Invalid server address</string>
    <string name="error_connection_failed">Connection failed, ensure this is the right server</string>
    <string name="error_http_connection_failed">Unable to perform a HTTP connection. Please ensure there is a web server</string>

    <string-array name="protocol_array">
        <item>https://</item>
        <item>http://</item>
    </string-array>

    <!-- Main activity -->
    <string name="ma_button_rate_us">Rate us !</string>
    <string name="ma_button_thanksto">Thanks to</string>
    <string name="ma_title_rate_us">Rate us !</string>
    <string name="ma_content_rate_us">If you like this application, please give rate us on Google Play Store</string>
    <string name="ma_title_add_account">Add an account</string>
    <string name="ma_button_goto_sync">Go to Accounts and Sync</string>
    <string name="ma_title_change_settings">Change app settings</string>
    <string name="ma_button_goto_settings">Go to Settings</string>
    <string name="ma_title_welcome">Welcome</string>
    <string name="ma_content_welcome">Welcome to ownCloud SMS application. This application let you synchronize your SMS to your ownCloud instance using SMS app.</string>
    <string name="ma_thanksto_people">ownCloud developers\n\
Contributors and issue\'s reporters</string>
    <string name="ma_title_sync_all">Synchronize all messages</string>
    <string name="ma_button_sync_accounts_now">Launch synchronization now</string>
    <string name="ma_title_restore_messages">Restore messages</string>
    <string name="ma_button_restore_messages">Choose account</string>

    <!-- Restauration -->
    <string name="title_activity_select_account">Select account</string>

    <!-- Notifications -->
    <string name="sync_title">Sync process</string>
    <string name="sync_inprogress">Sync in progress...</string>
    <string name="fatal_error">Fatal error ! </string>

    <!-- Errors -->
    <string name="err_sync_get_smslist">Error #1: Invalid data received from server when getting previous messages</string>
    <string name="err_sync_craft_http_request">Error #2: Error while crafting HTTP request</string>
    <string name="err_sync_push_request">Error #3: Push request failed</string>
    <string name="err_sync_push_request_resp">Error #4: Invalid datas received from server when pushing datas</string>
    <string name="err_sync_create_json_null_smslist">Error #5: NULL SMS List</string>
    <string name="err_sync_create_json_put_smslist">Error #6: Error while crafting push request</string>
    <string name="err_sync_create_json_request_encoding">Error #7: Unsupported encoding when generating request</string>
    <string name="err_sync_auth_failed">Error #8: Authentication failed</string>
    <string name="err_sync_http_request_returncode_unhandled">Error #9: Server set unhandled HTTP return code</string>
    <string name="err_sync_http_request_connect">Error #11: Unable to perform a connection to ownCloud instance</string>
    <string name="err_sync_http_request_httpexception">Error #12: Unable to perform a connection to ownCloud instance</string>
    <string name="err_sync_http_request_ioexception">Error #13: Unable to perform a connection to ownCloud instance</string>
    <string name="err_sync_http_request_resp">Error #14: Unable to parse server response</string>
    <string name="err_sync_http_request_parse_resp">Error #15: Unable to parse server response</string>
    <string name="err_sync_no_connection_available">Error #16: No data connection available</string>
    <string name="err_sync_account_unparsable">Error #17: malformed account. Please reconfigure it</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="title_activity_restore_sms__contact_list">RestoreSMS_ContactListActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>
