<!--
/*
 * Copyright (c) 2014-2015, Loic Blot <loic.blot@unix-experience.fr>
 * All rights reserved.
 * Redistribution and use in source and binary forms, with or without
 * modification, are permitted provided that the following conditions
 * are met:
 * 1. Redistributions of source code must retain the above copyright
 *    notice, this list of conditions and the following disclaimer.
 * 2. Redistributions in binary form must reproduce the above copyright
 *    notice, this list of conditions and the following disclaimer in the
 *    documentation and/or other materials provided with the distribution.
 *
 * THIS SOFTWARE IS PROVIDED BY THE REGENTS AND CONTRIBUTORS ``AS IS'' AND
 * ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
 * IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
 * ARE DISCLAIMED.  IN NO EVENT SHALL THE REGENTS OR CONTRIBUTORS BE LIABLE
 * FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
 * DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS
 * OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION)
 * HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT
 * LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY
 * OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 * SUCH DAMAGE.
 */
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fr.unix_experience.owncloud_sms.MainActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/main_tv_accounts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/ma_title_add_account"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/main_button_accounts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_tv_accounts"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:onClick="openAddAccount"
        android:background="@drawable/standard_button"
        style="@style/StandardButton"
        android:text="@string/ma_button_goto_sync" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/main_tv_accounts"
        android:layout_alignStart="@+id/main_tv_accounts"
        android:layout_below="@+id/main_button_accounts"
        android:layout_marginTop="18dp"
        android:text="@string/ma_title_change_settings"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/main_button_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:onClick="openAppSettings"
        android:background="@drawable/standard_button"
        style="@style/StandardButton"
        android:text="@string/ma_button_goto_settings" />
    
    <TextView
        android:id="@+id/tv_launchsync"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/main_tv_accounts"
        android:layout_alignStart="@+id/main_tv_accounts"
        android:layout_below="@+id/main_button_settings"
        android:layout_marginTop="18dp"
        android:text="@string/ma_title_sync_all"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/main_button_sync"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_launchsync"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:onClick="syncAllMessages"
        android:background="@drawable/standard_button"
        style="@style/StandardButton"
        android:text="@string/ma_button_sync_accounts_now" />
    
   <!-- <TextView
        android:id="@+id/tv_remoteaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/main_tv_accounts"
        android:layout_alignStart="@+id/main_tv_accounts"
        android:layout_below="@+id/main_button_sync"
        android:layout_marginTop="18dp"
        android:text="@string/ma_title_remote_account"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/main_button_choose_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_remoteaccount"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:onClick="selectRemoteAccount"
        android:background="@drawable/standard_button"
        style="@style/StandardButton"
        android:text="@string/choose_account" />
 --> 
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignStart="@+id/textView1"
        android:layout_below="@+id/main_button_sync"
        android:layout_marginTop="33dp"
        android:src="@drawable/next_arrow" />
    <!--  android:layout_below="@+id/main_button_choose_account" -->

</RelativeLayout>